--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -43,7 +43,7 @@
                 <div class="nav_item-manager d-flex flex-column">
                     <a routerLink="/account/{{users}}">Tài Khoản</a>
                     <a routerLink="/order/{{users}}">Đơn Hàng</a>
-                    <a href="">Sản Phẩm</a>
+                    <a routerLink="/warehouse/{{users}}">Sản Phẩm</a>
                     <a href="">Thu Nhập</a>
                     <a href="">Phản Hồi</a>
                 </div>
