--- a/src/app/admin/warehouse/warehouse.component.css
+++ b/src/app/admin/warehouse/warehouse.component.css
@@ -11,10 +11,9 @@ p {
 }
 
 .insert-layer {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    margin-left: 50px;
+   margin: 40px auto;
     height: 50px;
+    width: 1300px;
 }
 
 .insert-layer a {
