--- a/src/app/admin/warehouse/warehouse.component.html
+++ b/src/app/admin/warehouse/warehouse.component.html
@@ -2,7 +2,10 @@
 
 <div class="insert-layer d-flex align-items-center">
     <a routerLink="/home/{{userId}}"><i class="fa-solid fa-angle-left"></i></a>
-    <h2 style="margin-left: 100px;"><strong>Quản Lý Sản Phẩm</strong></h2>
+    <div class="d-flex justify-content-lg-between align-content-center" style="width: 100%;">
+        <h2 style="margin-left: 100px;"><strong>Quản Lý Sản Phẩm</strong></h2>
+        <button class="btn">Thêm Sản Phẩm Mới</button>
+    </div>
 </div>
 
 <table>
@@ -27,13 +30,13 @@
                 <img [src]="item.imgSub4" alt="" width="60" height="60">
             </div>
         </td>
-        <td>{{item.cost}}</td>
+        <td>{{item.cost | currency}}</td>
         <td>{{item.percentSale}}%</td>
         <td>{{item.describe}}</td>
         <td>
             <div class="d-flex">
-                <button *ngIf="item.role != 'admin'" style="margin-right: 5px;" type="button" class="btn">
-                    <i class="fa-solid fa-pen"></i>
+                <button *ngIf="item.role != 'admin'"  style="margin-right: 5px;" type="button" class="btn">
+                    <i class="fa-solid fa-pen" routerLink="/edit-product/{{item.id}}/{{userId}}"></i>
                 </button>
                 <button *ngIf="item.role != 'admin' " type="button" class="btn">
                     <i class="fa-solid fa-trash"></i>
